--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
         </div>
     </div>   
     
-    <div>
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p>-Thor, God of Thunder</p>
+    <div class="container-two">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="signature">-Thor, God of Thunder</p>
     </div>
 
-    <div>
+    <div class="container-three">
         <p>Call to action! It's time!<br>
             Sign up for our product by clicking that button right over there!</p>
         <button>Sign up</button>
