Final update container three

--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
     </div>
 
     <div class="container-three">
-        <p>Call to action! It's time!<br>
-            Sign up for our product by clicking that button right over there!</p>
+        <div class="text">
+            <p class="strong">Call to action! It's time!</p>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
         <button>Sign up</button>
     </div>
     
